Signed-off-by: HNDITDushan <s.t.dushan@gmail.com>

--- a/src/main/webapp/reportInstitution/report_cash_category_with_pro_day.xhtml
+++ b/src/main/webapp/reportInstitution/report_cash_category_with_pro_day.xhtml
@@ -58,6 +58,7 @@
                                          credit_collection:credit_collection,
                                          credit_collection_inward:credit_collection_inward,
                                          credit_collection_pharmacy:credit_collection_pharmacy,
+                                         credit_collection_pharmacy_old:credit_collection_pharmacy_old,
                                          col,
                                          opd_professional:opd_professional,
                                          opd_professional_credit:opd_professional_credit,
@@ -167,6 +168,11 @@
             
             <in:credit_collection_pharmacy 
                 id="credit_collection_pharmacy"/>
+
+            <p:spacer height="30"/>
+            
+            <in:credit_collection_pharmacy_old 
+                id="credit_collection_pharmacy_old"/>
 
             <p:spacer height="30"/>
 
