--- a/src/main/webapp/resources/income_report/pharmacy.xhtml
+++ b/src/main/webapp/resources/income_report/pharmacy.xhtml
@@ -41,7 +41,7 @@
             </p:column>    
             <p:columnGroup type="footer">
                 <p:row>
-                    <p:column colspan="5" footerText="Total Pharmacy Total"/>
+                    <p:column colspan="5" footerText="Total Pharmacy"/>
                     <p:column style="text-align: right;" footerText="#{bookKeepingSummery.pharmacyTotal}" rendered="#{!cc.attrs.wholeSale and !cc.attrs.credit}" >
                         <f:facet name="footer">
                             <h:outputLabel value="#{bookKeepingSummery.pharmacyTotal}">
