Privillage for Theam Change Signed-off-by: Dushan Maduranga <Dushan Maduranga>

--- a/src/main/webapp/channel/channel_report_all_booking.xhtml
+++ b/src/main/webapp/channel/channel_report_all_booking.xhtml
@@ -127,6 +127,13 @@
                                 <p:outputLabel value="(#{b.creditCompany.institutionCode})" rendered="#{b.paymentMethod=='Agent'}" >
                                 </p:outputLabel>
                             </p:column>
+                            <p:column style="text-align: right;" >
+                                <f:facet name="header" >
+                                    <p:outputLabel value="Area" />
+                                </f:facet>
+                                <p:outputLabel value="#{b.patient.person.area.name}" >
+                                </p:outputLabel>
+                            </p:column>
 <!--                            <p:column headerText="Status" >
                                 <p:outputLabel rendered="#{b.billType eq 'ChannelOnCall'}" value="Credit" style="color: red;"/>
                                 <p:outputLabel rendered="#{b.billType eq 'ChannelAgent'}" value="Agent" style="color: green;"/>
