--- a/src/main/webapp/resources/patient/searchPatient.xhtml
+++ b/src/main/webapp/resources/patient/searchPatient.xhtml
@@ -17,7 +17,7 @@
                         value="#{cc.attrs.patient}" converter="patientConverter"
                         completeMethod="#{patientController.completePatientByNameOrCode}" 
                         var="apt" itemLabel="#{apt.person.nameWithTitle}" 
-                        itemValue="#{apt}" size="30"  style="width: 400px;" required="true" requiredMessage="Please Select the Patient">
+                        itemValue="#{apt}" size="30"  style="width: 400px;" >
             <p:ajax event="itemSelect" process="acPt" update="panSearch"/>
         </p:autoComplete>   
 
