--- a/src/main/webapp/pharmacy/pharmacy_report_transfer_receive_bill.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_report_transfer_receive_bill.xhtml
@@ -100,7 +100,10 @@
                                         </p:column>
                                         <p:column style="text-align: right;" >
                                             <f:facet name="footer">
-                                                <h:outputLabel value="#{reportsTransfer.netTotalValues}" >
+                                                <h:outputLabel value="#{-reportsTransfer.netTotalValues}" rendered="#{sessionController.institutionPreference.applicationInstitution eq 'Cooperative'}" >
+                                                    <f:convertNumber pattern="#,##0.00" ></f:convertNumber>
+                                                </h:outputLabel>
+                                                <h:outputLabel value="#{reportsTransfer.netTotalValues}" rendered="#{sessionController.institutionPreference.applicationInstitution ne 'Cooperative'}" >
                                                     <f:convertNumber pattern="#,##0.00" ></f:convertNumber>
                                                 </h:outputLabel>
                                             </f:facet>
