--- a/src/main/webapp/pharmacy/pharmacy_report_transfer_receive_bill_summery.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_report_transfer_receive_bill_summery.xhtml
@@ -72,11 +72,17 @@
                                     <f:facet name="header">
                                         <h:outputLabel value="Net Total"/>
                                     </f:facet>
-                                    <h:outputLabel value="#{i.value1}" >
+                                    <h:outputLabel value="#{-i.value1}" rendered="#{sessionController.institutionPreference.applicationInstitution eq 'Cooperative'}" >
+                                        <f:convertNumber pattern="#,##0.00" />
+                                    </h:outputLabel>
+                                    <h:outputLabel value="#{i.value1}" rendered="#{sessionController.institutionPreference.applicationInstitution ne 'Cooperative'}"  >
                                         <f:convertNumber pattern="#,##0.00" />
                                     </h:outputLabel>
                                     <f:facet name="footer">
-                                        <h:outputLabel value="#{reportsTransfer.netTotalValues}" >
+                                        <h:outputLabel value="#{-reportsTransfer.netTotalValues}" rendered="#{sessionController.institutionPreference.applicationInstitution eq 'Cooperative'}" >
+                                            <f:convertNumber pattern="#,##0.00" />
+                                        </h:outputLabel>
+                                         <h:outputLabel value="#{reportsTransfer.netTotalValues}" rendered="#{sessionController.institutionPreference.applicationInstitution ne 'Cooperative'}" >
                                             <f:convertNumber pattern="#,##0.00" />
                                         </h:outputLabel>
                                     </f:facet>
