--- a/src/main/webapp/hr/hr_staff_loan_installment.xhtml
+++ b/src/main/webapp/hr/hr_staff_loan_installment.xhtml
@@ -174,6 +174,9 @@
                             <p:column headerText="Roster">
                                 <h:outputLabel value="#{i.staff.roster.name}"/>
                             </p:column>
+                            <p:column headerText="Starting Balance">
+                                <h:outputLabel value="#{i.startingBalance}"/>
+                            </p:column>
 
                             <p:column headerText="From"  >
                                 <f:facet name="header">
