--- a/src/main/webapp/reportLab/report_investigation_summery_by_date_inward_opd.xhtml
+++ b/src/main/webapp/reportLab/report_investigation_summery_by_date_inward_opd.xhtml
@@ -110,7 +110,7 @@
 
                 </p:dataTable>                
 
-                <p:dataTable id="tbl2" value="#{bookKeepingSummery.billedBills}" var="b">
+<!--                <p:dataTable id="tbl2" value="#{bookKeepingSummery.billedBills}" var="b">
                     <p:column >
                         #{b.insId}"
                     </p:column>
@@ -168,7 +168,7 @@
                             <f:convertNumber pattern="#,##0.00" ></f:convertNumber>
                         </p:outputLabel>
                     </p:column>
-                </p:dataTable>
+                </p:dataTable>-->
             </p:panel>
         </h:form>
     </ui:define>
