--- a/src/main/webapp/ward/ward_pharmacy_bht_issue_request_bill_search.xhtml
+++ b/src/main/webapp/ward/ward_pharmacy_bht_issue_request_bill_search.xhtml
@@ -18,15 +18,15 @@
                         <h:outputLabel value="To Date"/>
                         <p:calendar id="toDate" value="#{searchController.toDate}" navigator="false" pattern="dd MMMM yyyy hh mm ss a" >                                                                              
                         </p:calendar>
-                        <p:commandButton id="btnSearch" ajax="false" value="Search" action="#{searchController.createRequestTable()}"
+                        <p:commandButton id="btnSearch" ajax="false" value="Search" action="#{searchController.createInwardBHTRequestTable}"
                                         actionListener="#{transferIssueController.makeNull()}"/>
                         <p:spacer height="30"/><h:outputLabel/><h:outputLabel/><h:outputLabel/><h:outputLabel/>
 
                         <h:outputLabel value="Request No"/>   
-                        <h:outputLabel value="From Deprtment"/> 
+                        <h:outputLabel value="BHT No"/> 
                         <h:outputLabel/><h:outputLabel/><h:outputLabel/>
                         <p:inputText autocomplete="off"  value="#{searchController.searchKeyword.billNo}" />   
-                        <p:inputText autocomplete="off"  value="#{searchController.searchKeyword.department}" />                                                
+                        <p:inputText autocomplete="off"  value="#{searchController.searchKeyword.bhtNo}" />                                                
                         <h:outputLabel/><h:outputLabel/>
                     </h:panelGrid>
                 </f:facet>
@@ -43,8 +43,8 @@
                     <p:column headerText="Request No">                      
                         <h:outputLabel value="#{p.deptId}"/>                         
                     </p:column>
-                    <p:column headerText="From Department">                      
-                        <h:outputLabel value="#{p.department.name}"/>                          
+                    <p:column headerText="Department For request">                      
+                        <h:outputLabel value="#{p.toDepartment.name}"/>                          
                     </p:column> 
                     <p:column headerText="Requested at"  >
 
@@ -72,19 +72,12 @@
                         </h:panelGroup>
                     </p:column>  
                     <p:column>
-                        <p:commandButton ajax="false" value="View Request" action="pharmacy_reprint_transfer_request">
+                        <p:commandButton ajax="false" value="View Request" action="/ward/ward_pharmacy_reprint_bht_issue_request">
                             <f:setPropertyActionListener value="#{p}" target="#{pharmacyBillSearch.bill}"/>
                         </p:commandButton>
                     </p:column>
-                    <p:column>
-                        <p:commandButton ajax="false" value="Issue" action="pharmacy_transfer_issue"
-                                         disabled="#{p.cancelled eq true}">
-                            <f:setPropertyActionListener target="#{transferIssueController.requestedBill}" value="#{p}"/>
-                        </p:commandButton>
-                    </p:column>
-
                     <p:column headerText="Issued">                   
-                        <p:dataTable var="b" value="#{p.forwardReferenceBills}">                           
+                        <p:dataTable var="b" value="#{p.listOfBill}">                           
                             <p:column  >                                                               
                                 <h:outputLabel  value="#{b.deptId}"/>                                   
                             </p:column>
@@ -119,7 +112,7 @@
                                 </h:outputLabel>                                  
                             </p:column>
                             <p:column>
-                                <p:commandButton ajax="false" value="View Issued Note" action="pharmacy_reprint_transfer_isssue" >
+                                <p:commandButton ajax="false" value="View Issue Bill" action="/ward/ward_pharmacy_reprint_bht_issue_bill_reprint" >
                                     <f:setPropertyActionListener target="#{pharmacyBillSearch.bill}" value="#{b}"/>
                                 </p:commandButton>
                             </p:column>
